--- a/regan-bourland.html
+++ b/regan-bourland.html
@@ -23,6 +23,7 @@
 				body { background-color: black; color: #B3B3B3; }
 				a, h2, strong { color: #00A5B8; }
 				.employ, .educate, .skills { border-color: #00A5B8; }
+				.app-grid li, .skill-grid li { border-color: #222222; }
 			}
 			@media (min-width: 576px) {
 				.app-grid { grid-template-columns: repeat(3, 1fr); }
@@ -54,8 +55,8 @@
 		<p style="text-align: justify">My family and I intend to move to Denver in 2026. Once we move, I can no longer work at ProAthlete for legal reasons. Therefore, I&rsquo;m looking for a position that is: fully-remote or local to Denver, full-time employment, and starts as soon as possible.</p>
 		<ul class="contact-list" aria-label="Contact/References">
 			<li><a href="mailto:regan.bourland@gmail.com" target="_blank">regan.bourland@gmail.com</a></li>
-			<li><a href="https://www.linkedin.com/in/rbld" target="_blank">https://www.linkedin.com/in/rbld</a></li>
-			<li><a href="https://github.com/14rego" target="_blank">https://github.com/14rego</a></li>
+			<li><a href="https://linkedin.com/in/rbld" target="_blank">linkedin.com/in/rbld</a></li>
+			<li><a href="https://github.com/14rego" target="_blank">github.com/14rego</a></li>
 		</ul>
 	</header>
 	<main>
