--- a/regan-bourland.html
+++ b/regan-bourland.html
@@ -78,6 +78,10 @@
 					<li>Angular</li>
 					<li>Alpine</li>
 
+					<li>AEM</li>
+					<li>Wordpress</li>
+					<li>Wagtail</li>
+
 					<li>HTL/Sightly</li>
 					<li>JSP</li>
 					<li>Typescript</li>
@@ -94,10 +98,12 @@
 					<li>AWS</li>
 
 					<li>NPM</li>
-					<li>Flow</li>
-					<li>Babel</li>
+					<li>Yarn</li>
 					<li>Webpack</li>
 					<li>Gulp</li>
+
+					<li>NUnit</li>
+					<li>Selenium</li>
 
 					<li>JS ES5/6</li>
 					<li>jQuery</li>
