--- a/regan-bourland.html
+++ b/regan-bourland.html
@@ -51,8 +51,8 @@
 	<header>
 		<h1 class="text-center">Regan L. Bourland</h1>
 		<p class="text-center"><em>he/him/his</em></p>
-		<p style="text-align: justify">I have over twenty years of professional experience in design, technical architecture, and web development. I&rsquo;m a full-stack developer with a passion for gorgeous user interfaces, amazing user experiences and flawless accessibility. I love to focus on modularization and efficiency of both design and technical solution. I also have a BA in Visual Communications and many, many hours of continuing education.</p>
-		<p style="text-align: justify">My family and I intend to move to Denver in 2026. Once we move, I can no longer work at ProAthlete for legal reasons. Therefore, I&rsquo;m looking for a position that is: fully-remote or local to Denver, full-time employment, and starts as soon as possible.</p>
+		<p style="text-align: justify">I have over twenty years of professional experience in design, technical architecture, and web development. I&rsquo;m a full-stack developer with a passion for gorgeous user interfaces, amazing user experiences and flawless accessibility. I love to focus on documentation, modularization and efficiency of both design and technical solution. I also have a BA in Visual Communications and many, many hours of continuing education.</p>
+		<p style="text-align: justify">My family and I intend to move to Denver in 2026. Once we move, I can no longer work at ProAthlete for legal reasons. Therefore, I&rsquo;m looking for a position that: is remote or local to Denver, offers full-time employment, and starts as soon as&nbsp;possible.</p>
 		<ul class="contact-list" aria-label="Contact/References">
 			<li><a href="mailto:regan.bourland@gmail.com" target="_blank">regan.bourland@gmail.com</a></li>
 			<li><a href="https://linkedin.com/in/rbld" target="_blank">linkedin.com/in/rbld</a></li>
@@ -81,6 +81,7 @@
 					<li>AEM</li>
 					<li>Wordpress</li>
 					<li>Wagtail</li>
+					<li>Gatsby</li>
 
 					<li>HTL/Sightly</li>
 					<li>JSP</li>
@@ -112,10 +113,12 @@
 					<li>Material</li>
 					<li>Tailwind</li>
 					<li>Bootstrap</li>
+					<li>SASS/Less</li>
 
-					<li>Git</li>
+					<li>Git/GitFlow</li>
 					<li>SVN</li>
 					<li>TFS</li>
+					<li>Jira</li>
 				</ul>
 				</li>
 				<li>
