--- a/regan-bourland.html
+++ b/regan-bourland.html
@@ -56,6 +56,7 @@
 		<ul class="contact-list" aria-label="Contact/References">
 			<li><a href="mailto:regan.bourland@gmail.com" target="_blank">regan.bourland@gmail.com</a></li>
 			<li><a href="https://linkedin.com/in/rbld" target="_blank">linkedin.com/in/rbld</a></li>
+			<li><a href="https://profile.indeed.com/p/reganb-45cn5z9" target="_blank">profile.indeed.com/p/reganb-45cn5z9</a></li>
 			<li><a href="https://github.com/14rego" target="_blank">github.com/14rego</a></li>
 		</ul>
 	</header>
