--- a/regan-bourland.html
+++ b/regan-bourland.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Regan L. Bourland | regan.bourland@gmail.com</title>
+		<title>Regan Bourland | regan.bourland@gmail.com</title>
 		<link rel="stylesheet" href="css/style.css">
 		<meta name="description" content="Forever a student, I'm always interested in new ideas, processes, and possibilities.">
 		<style>
@@ -49,10 +49,10 @@
 	</head>
 <body>
 	<header>
-		<h1 class="text-center">Regan L. Bourland</h1>
+		<h1 class="text-center">Regan Bourland</h1>
 		<p class="text-center"><em>he/him/his</em></p>
 		<p style="text-align: justify">I have over twenty years of professional experience in design, technical architecture, and web development. I&rsquo;m a full-stack developer with a passion for gorgeous user interfaces, amazing user experiences and flawless accessibility. I love to focus on documentation, modularization and efficiency of both design and technical solution. I also have a BA in Visual Communications and many, many hours of continuing education.</p>
-		<p style="text-align: justify">My family and I intend to move to Denver in 2026. Once we move, I can no longer work at ProAthlete for legal reasons. Therefore, I&rsquo;m looking for a position that: is remote or local to Denver, offers full-time employment, and starts as soon as&nbsp;possible.</p>
+		<p style="text-align: justify">My family and I intend to move to Denver in Spring 2026. Once we move, I can no longer work at ProAthlete for legal reasons. Therefore, I&rsquo;m looking for a position that: is remote or local to Denver, offers full-time employment, and starts as soon as&nbsp;possible.</p>
 		<ul class="contact-list" aria-label="Contact/References">
 			<li><a href="mailto:regan.bourland@gmail.com" target="_blank">regan.bourland@gmail.com</a></li>
 			<li><a href="https://linkedin.com/in/rbld" target="_blank">linkedin.com/in/rbld</a></li>
@@ -69,11 +69,10 @@
 				<ul class="skill-grid" aria-label="Technology Experience">
 					<li>.NET MVC</li>
 					<li>Java</li>
-					<li>OOP PHP</li>
+					<li>PHP</li>
 					<li>Python</li>
-					<li>Django</li>
-					<li>Ruby</li>
 
+					<li>Django</li>
 					<li>Vue</li>
 					<li>React</li>
 					<li>Angular</li>
@@ -82,10 +81,8 @@
 					<li>AEM</li>
 					<li>Wordpress</li>
 					<li>Wagtail</li>
-					<li>Gatsby</li>
 
 					<li>HTL/Sightly</li>
-					<li>JSP</li>
 					<li>Typescript</li>
 					<li>XML</li>
 
@@ -99,25 +96,24 @@
 					<li>Apache</li>
 					<li>AWS</li>
 
-					<li>NPM</li>
-					<li>Yarn</li>
+					<li>Vite</li>
 					<li>Webpack</li>
+					<li>Yarn</li>
+					<li>NPM</li>
 					<li>Gulp</li>
 
 					<li>NUnit</li>
 					<li>Selenium</li>
 
-					<li>JS ES5/6</li>
+					<li>JS ES5/ES6</li>
 					<li>jQuery</li>
-					<li>Actionscript</li>
 					
 					<li>Material</li>
-					<li>Tailwind</li>
 					<li>Bootstrap</li>
+					<li>Tailwind</li>
 					<li>SASS/Less</li>
 
-					<li>Git/GitFlow</li>
-					<li>SVN</li>
+					<li>GitFlow</li>
 					<li>TFS</li>
 					<li>Jira</li>
 				</ul>
@@ -147,7 +143,7 @@
 				<li>
 					<h3>(<em>2021&thinsp;&mdash;&thinsp;Current</em>) Web Developer; ProAthlete Inc.; Kansas City, MO</h3>
 					<p>Front-end developer on a smaller team. Plan accessibility, user experience, A/B testing, design integration, and development of all e-commerce websites and several internal business solutions.</p>
-					<p><small><strong>Common Stacks:</strong> .NET Core MVC, Vue, Javascript ES6, jQuery</small></p>
+					<p><small><strong>Common Stacks:</strong> .NET Core MVC, Vue/Vite, Javascript ES6, jQuery</small></p>
 				</li>
 				<li>
 					<h3>(<em>2019&thinsp;&mdash;&thinsp;2021</em>) Senior Developer; Diamond Merckens Hogan; Kansas City, MO</h3>
@@ -157,7 +153,7 @@
 					<p><small>
 						<strong>Certification:</strong> Adobe Experience Manager 6.0 Expert Developer<br>
 						<strong>Previous title at DMH:</strong> Lead AEM Developer<br>
-						<strong>Common Stacks:</strong> Java, ES6, HTL/Sightly, Javascript ES6, jQuery, python, Django, PHP
+						<strong>Common Stacks:</strong> Java, ES6, HTL/Sightly, jQuery, python, Django, PHP
 					</small></p>
 				</li>
 				<li>
