--- a/regan-bourland.html
+++ b/regan-bourland.html
@@ -52,7 +52,7 @@
 		<h1 class="text-center">Regan Bourland</h1>
 		<p class="text-center"><em>he/him/his</em></p>
 		<p style="text-align: justify">I have over twenty years of professional experience in design, technical architecture, and web development. I&rsquo;m a full-stack developer with a passion for gorgeous user interfaces, amazing user experiences and flawless accessibility. I love to focus on documentation, modularization and efficiency of both design and technical solution. I also have a BA in Visual Communications and many, many hours of continuing education.</p>
-		<p style="text-align: justify">My family and I intend to move to Denver in Spring 2026. Once we move, I can no longer work at ProAthlete for legal reasons. Therefore, I&rsquo;m looking for a position that: is remote or local to Denver, offers full-time employment, and starts as soon as&nbsp;possible.</p>
+		<p style="text-align: justify">My family is moving to Denver. I can no longer work at ProAthlete for legal reasons from Colorado. Therefore, I&rsquo;m looking for a position that: is remote or local to Denver, offers full-time employment, and starts as soon as&nbsp;possible.</p>
 		<ul class="contact-list" aria-label="Contact/References">
 			<li><a href="mailto:regan.bourland@gmail.com" target="_blank">regan.bourland@gmail.com</a></li>
 			<li><a href="https://linkedin.com/in/rbld" target="_blank">linkedin.com/in/rbld</a></li>
@@ -220,7 +220,7 @@
 	<footer>
 		<p class="text-center"><small>
 			<em>Professional references available upon request.</em><br>
-			Updated Oct. 2025
+			Updated Nov. 2025
 		</small></p>
 	</footer>
 </body>
